<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.RecipeDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            app:collapsedTitleTextAppearance="@style/Theme.Foodium.ToolbarTitle"
            app:contentScrim="@color/color_primary"
            app:expandedTitleMarginBottom="@dimen/_12sdp"
            app:expandedTitleMarginStart="@dimen/_8sdp"
            app:expandedTitleTextAppearance="@style/Theme.Foodium.ExpandedTitle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="@color/color_primary"
            app:toolbarId="@id/toolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true">

                <ImageView
                    android:id="@+id/imageRecipe"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    tools:src="@drawable/sample_placeholder" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/fade_background" />

            </RelativeLayout>


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/app_name" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textRecipeTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/cougrette"
                android:paddingStart="@dimen/_8sdp"
                android:paddingTop="@dimen/_4sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:textColor="@color/color_text_dark"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/sample_recipe_name" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_4sdp"
                android:paddingEnd="@dimen/_4sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textRecipeTitle">

                <com.google.android.material.chip.Chip
                    style="@style/Theme.Foodium.InActiveChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegetarian"
                    android:textAppearance="@style/Theme.Foodium.ChipTextAppearance"
                    android:textSize="@dimen/_10ssp" />

                <com.google.android.material.chip.Chip
                    style="@style/Theme.Foodium.InActiveChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gluten_free"
                    android:textAppearance="@style/Theme.Foodium.ChipTextAppearance"
                    android:textSize="@dimen/_10ssp" />

                <com.google.android.material.chip.Chip
                    style="@style/Theme.Foodium.InActiveChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/veg"
                    android:textAppearance="@style/Theme.Foodium.ChipTextAppearance"
                    android:textSize="@dimen/_10ssp" />

                <com.google.android.material.chip.Chip
                    style="@style/Theme.Foodium.InActiveChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular"
                    android:textAppearance="@style/Theme.Foodium.ChipTextAppearance"
                    android:textSize="@dimen/_10ssp" />

                <com.google.android.material.chip.Chip
                    style="@style/Theme.Foodium.InActiveChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/healthy"
                    android:textAppearance="@style/Theme.Foodium.ChipTextAppearance"
                    android:textSize="@dimen/_10ssp" />

                <com.google.android.material.chip.Chip
                    style="@style/Theme.Foodium.InActiveChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dairyFree"
                    android:textAppearance="@style/Theme.Foodium.ChipTextAppearance"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/ubuntu_medium"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:textColor="@color/color_text_light"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chipGroup"
                tools:text="@string/loren_ipsum_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>