<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_4sdp"
    android:elevation="@dimen/_8sdp"
    app:cardCornerRadius="@dimen/_8sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.30" />

        <TextView
            android:id="@+id/txt_recipe_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:ellipsize="end"
            android:fontFamily="@font/cougrette"
            android:maxLines="1"
            android:textColor="@color/color_text_dark"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline1"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/sample_recipe_name" />

        <TextView
            android:id="@+id/txt_recipe_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:ellipsize="end"
            android:fontFamily="@font/ubuntu_regular"
            android:maxLines="3"
            android:textColor="@color/color_text_light"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/txt_recipe_title"
            tools:text="@string/loren_ipsum_text" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:clickable="false"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/likes"
            android:textColor="@color/color_blue"
            android:textSize="@dimen/_8ssp"
            app:chipBackgroundColor="@color/color_white"
            app:chipIcon="@drawable/ic_like"
            app:chipIconSize="@dimen/_14sdp"
            app:chipIconTint="@color/color_blue"
            app:chipStrokeColor="@color/color_blue"
            app:chipStrokeWidth="2dp"
            app:iconStartPadding="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/txt_recipe_description"
            app:layout_constraintTop_toBottomOf="@id/txt_recipe_description" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:clickable="false"
            android:fontFamily="@font/ubuntu_medium"
            android:textColor="@color/color_yellow"
            android:textSize="@dimen/_8ssp"
            app:chipBackgroundColor="@color/color_white"
            app:chipIcon="@drawable/ic_time"
            app:chipIconSize="@dimen/_14sdp"
            app:chipIconTint="@color/color_yellow"
            app:chipStrokeColor="@color/color_yellow"
            app:chipStrokeWidth="2dp"
            app:iconStartPadding="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/chip_likes"
            app:layout_constraintTop_toBottomOf="@id/txt_recipe_description"
            tools:text="45" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_veg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:clickable="false"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/veg"
            android:textColor="@color/color_green"
            android:textSize="@dimen/_8ssp"
            android:visibility="invisible"
            app:chipBackgroundColor="@color/color_white"
            app:chipIcon="@drawable/ic_veg"
            app:chipIconSize="@dimen/_14sdp"
            app:chipIconTint="@color/color_green"
            app:chipStrokeColor="@color/color_green"
            app:chipStrokeWidth="2dp"
            app:iconStartPadding="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/chip_time"
            app:layout_constraintTop_toBottomOf="@id/txt_recipe_description"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/img_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_4sdp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/chip_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/chip_time"
            app:srcCompat="@drawable/ic_favorite_solid"
            app:tint="@color/colorFavorite" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_recipe"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_4sdp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/rounded"
            tools:src="@drawable/sample_placeholder" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>